--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,8 @@
 @import "reset";
+@import "variables";
 @import "layout/body";
+@import "components/fonts";
+@import "components/menu";
+@import "components/buttons";
 @import "layout/header";
+@import "layout/main-content";
