feat: add section 'online control'

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,11 @@
 // text-colors
 $gold_color: #e3b873;
 $white_color: #fff;
+$dark_color: #363636;
 
 // btn-colors
 $bckg-btn: #e3b873;
-$txt-color-btn: #fff;
+$link-color-btn: #fff;
 
 // fonts
 $font-futura: "Futura", sans-serif; 
