--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -5,13 +5,38 @@
   text-transform: uppercase;
   font-family: $font;
   font-size: $size;
+  color: $link-color-btn;
   background-color: $bckg-btn;
+  box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
+  cursor: pointer;
 
   a {
     display: flex;
+    width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    color: $txt-color-btn;
+    color: $link-color-btn;
+  }
+}
+
+.btn-play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  width: 85px;
+  height: 85px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: $gold_color;
+
+  div {
+    transform: translate(33%);
+    border: 20px solid transparent;
+    border-left: 25px solid $white_color;
   }
 }
