--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 .aside {
   display: flex;
-  width: 5.7%;
+  width: 82px;
   align-items: center;
 
   p {
@@ -56,7 +56,7 @@
     }
 
     p {
-      margin: 20px 0 40px;
+      margin: 25px 0 45px;
       @include futura-font(1.37rem, $white_color, none);
       line-height: 1.9rem;
     }
