--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,5 +4,7 @@
 @import "components/fonts";
 @import "components/menu";
 @import "components/buttons";
+@import "components/form";
 @import "layout/header";
-@import "layout/main-content";
+@import "layout/complete-projects";
+@import "layout/on-control";
