fix: change code of video block and add some details

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,5 +7,8 @@ $dark_color: #363636;
 $bckg-btn: #e3b873;
 $link-color-btn: #fff;
 
+// bacground colors
+$back-dark: #131313;
+
 // fonts
 $font-futura: "Futura", sans-serif; 
