--- a/scss/layout/_on-control.scss
+++ b/scss/layout/_on-control.scss
@@ -50,7 +50,8 @@
 
 .on-control__video {
   position: relative;
-  width: fit-content;
+  width: 56%;
+  height: 435px;
   margin: 2% auto 0;
   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15);
 
@@ -65,6 +66,11 @@
     background-color: $gold_color;
   }
 
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+
   .on-control__video-overlay {
     position: absolute;
     top: 0;
@@ -72,6 +78,16 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+    transition: background-color 1s ease-out .1s, z-index 1s ease-out .1s;
+  }
+
+  &:hover {
+    .btn-play,
+    .on-control__video-overlay {
+      background-color: transparent;
+      z-index: -1;
+    }
   }
 }
 
@@ -81,5 +97,3 @@
   @include futura-font(1.25rem, $dark_color, none);
   line-height: 2.13rem;
 }
-
-
